--- a/src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html
@@ -134,7 +134,7 @@
                                 src="https://drive.google.com/thumbnail?id=1Sbeo9hQDAYFvaub1FLfvas23LU0kosqF"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Computer Network(6P403)</p>
+                            <p class="pdf-title">Computer Network<br>(6P403)</p>
                             <p class="pdf-author">GPCS</p>
                             <a
                                 href="https://drive.google.com/uc?export=download&id=1Sbeo9hQDAYFvaub1FLfvas23LU0kosqF"
